# mac_asd

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STATUS.md  agents.md  alembic.ini  asd_manifest.yaml  gemma4_recomends.md  pyproject.toml  requirements.txt  telegram_session.session
.hermes/: audit_report.md  audit_report_2026-05-03.md
.qwen/: settings.json
alembic/: env.py
config/: id_requirements.yaml  telegram_channels.yaml
credentials/: .gitkeep
data/: benchmark_report_los.md  forensic_61.17.json  inventory_61.17.json  inventory_LOS_1777710697.json  inventory_LOS_1777710872.json  inventory_LOS_1777711082.json  inventory_LOS_test_1777699807.json  inventory_LOS_test_1777700844.json  pto_analysis_61.17.json  telegram_ingest_state.yaml  telegram_knowledge.yaml  telegram_quality_report.yaml  telegram_search_logistics.yaml  telegram_search_procurement.yaml  telegram_search_smeta.yaml  telegram_validation.json  typical_rates.yaml  vlm_analysis_LOS.json
docs/: BUILDING_LIFECYCLE_WORKFLOW.md  COMPONENT_ARCHITECTURE.md  COMPREHENSIVE_ANALYSIS_20260505.md  CONCEPT_v11.md  CONCEPT_v12.md  CORE_LOGIC_DESIGN.md  DATA_SCHEMA.md  DEPLOYMENT_PLAN.md  MAC_ASD_Investor_Deck.html  MCP_TOOLS_SPEC.md  MODEL_STRATEGY.md  PROMPTS_GEMMA4.md  STATUS.md  STRATEGY.md  dev-notes.md  gemini_workflow.odt  generate_concept_pdf_v3.py  generate_concept_pdf_v4.py  id_pipeline_architecture.md  ppr_generator.md  workflaw.docx
infrastructure/: docker-compose.yml  setup_linux.sh  setup_mac.sh
scripts/: .meganorm_progress.json  _check_channels.py  _find_channels.py  analyze_contract.cjs  auth_telegram.py  backup_cron.sh  cron_ingest_telegram.sh  download_meganorm.py  download_normatives_v2.py  dry_test_demontazh.py  extract_idprosto_knowledge.py  generate_china_digest_pdf.py  generate_forensic_pdf.py  generate_grok_proposals_pdf.py  generate_inspection_report.py  generate_inspection_report_v2.py  generate_inventory_los_pdf.py  generate_inventory_los_v2.py  generate_inventory_pdf.py  generate_project_metrics_pdf.py  generate_report.py  generate_report_v2.py  generate_synthetic_docs.py  generate_technical_analysis_pdf.py  index_normative.py  ingest_blc_telegram.py  loop_5_cycles.sh  migrate_blc_traps.py  missing_normative.json  missing_normative_full.json  normative_docs_qwen.json  quick_review.cjs  run_benchmark.py  run_inventory.py  run_pto_agent.py  run_restoration_pipeline.py  scrape_meganorm.py  telegram_content_quality.py  telegram_kb_ingest.py  telegram_scout.py  (+2 more)
src/: config.py  main.py  mcp_server.py
tests/: conftest.py  test_act_generator.py  test_backup.py  test_container.py  test_delo_agent.py  test_e2e_forensic.py  test_e2e_parallel_graph.py  test_evidence_graph.py  test_forensic_checks.py  test_google_integration.py  test_hypothesis_scoring.py  test_id_requirements.py  test_ingestion_ocr.py  test_is_generator.py  test_journal_reconstructor.py  test_journal_restorer.py  test_legal_documents.py  (+12 more)
(+461 files in other folders)
