[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-asd"
version = "13.0.0"
description = "Multi-Agent Construction AI System for Automated Subcontracting Decisions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Oleg Shcherbakov"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mlx-lm>=0.31.1",
    "mlx-vlm>=0.4.3",
    "mlx-embeddings>=0.0.3",
    "fastmcp[cli]>=2.14.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "docxtpl>=0.18.0",
    "openpyxl>=3.1.0",
    "ezdxf>=1.3.0",
    "rapidfuzz>=3.6.0",
    "cairosvg>=2.7.0",
    "networkx>=3.2.0",
    "cachetools>=5.3.0",
    "psutil>=5.9.0",
    "langgraph>=1.0.0",
    "langchain-core>=0.1.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "hypothesis>=6.100",
    "ruff>=0.4.0",
    "mypy>=1.10",
]
google = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
]
telegram = [
    "telethon>=1.36.0",
]
docs = [
    "docling>=2.3.0",
]
all = [
    "mac-asd[dev,google,telegram,docs]",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py
"tests/**" = ["B011"]     # allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "smoke: fast smoke tests for CI",
]
